<resources>
    <string name="app_name">Tour Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ImageDesc">Image Description</string>
    <string name="testtext">Test Text</string>
    <string name="title_activity_information">Information</string>
    <string name="state">State</string>
    <string name="findGuide">Find Guide</string>
    <string name="fullguide">Full Guide</string>
    <string name="destination">Destination</string>
    <string name="place">Place</string>
    <string name="favorite">Favorite</string>
    <string name="rate">Rate</string>
    <string name="about">About</string>
    <string name="stateNO">State 1</string>
    <string name="detailstate">Top places to visit in state 5 of Nepal</string>
    <string name="highlights">Highlights</string>
    <string name="besttime">Best time</string>
    <string name="accommodation">Accommodation</string>
    <string name="transportation">Transportation</string>
    <string name="description">Description</string>
    <string name="version">Version 1.1</string>
    <string name="ok">OK</string>
</resources>
