<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lintend.tourguide.Information"
    tools:showIn="@layout/activity_information">
    <RelativeLayout
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:padding="5dp"
            app:cardElevation="2dp"
            app:cardCornerRadius="2dp"
            android:id="@+id/info_card"
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:drawableStart="@drawable/ic_storage_black_24dp"
                android:drawableLeft="@drawable/ic_storage_black_24dp"
                android:drawablePadding="30dp"
                android:padding="4dp"
                android:id="@+id/stateView"
                android:textSize="20sp"
                android:gravity="center|start"
                android:text="@string/state"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:drawableStart="@drawable/ic_info_black_24dp"
                android:drawableLeft="@drawable/ic_info_black_24dp"
                android:drawablePadding="30dp"
                android:id="@+id/findGUIDE"
                android:layout_below="@+id/stateView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="4dp"
                android:textSize="18sp"
                android:text="@string/findGuide"/>

                <com.google.android.gms.ads.AdView
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/findGUIDE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    xmlns:ads ="http://schemas.android.com/apk/res-auto"
                    ads:adSize="BANNER"
                    android:id="@+id/detailAD"
                    ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
                    android:layout_marginBottom="4dp"
                    >

                </com.google.android.gms.ads.AdView>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_margin="4dp"
            app:cardElevation="2dp"
            android:padding="4dp"
            android:layout_below="@id/info_card"
            android:id="@+id/detail_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="4dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:id="@+id/full_guide"
                    android:text="@string/fullguide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/destination"
                    android:layout_below="@+id/full_guide"
                    android:padding="4dp"
                    android:textStyle="bold"
                    android:text="@string/destination"
                    android:textSize="18sp"
                    android:gravity="start|center"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/place"
                    android:layout_toRightOf="@+id/destination"
                    android:layout_toEndOf="@+id/destination"
                    android:layout_below="@+id/full_guide"
                    android:padding="4dp"
                    android:gravity="center|start"
                    android:text="@string/place"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
                <TextView
                    android:id="@+id/highlight"
                    android:layout_below="@+id/destination"
                    android:padding="4dp"
                    android:textStyle="bold"
                    android:text="@string/highlights"
                    android:textSize="18sp"
                    android:gravity="start|center"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/highlightContent"
                    android:layout_below="@+id/highlight"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:gravity="center|start"
                    android:text="@string/place"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/besttime"
                    android:layout_below="@+id/highlightContent"
                    android:padding="4dp"
                    android:textStyle="bold"
                    android:text="@string/besttime"
                    android:textSize="18sp"
                    android:gravity="start|center"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/bestimeContent"
                    android:layout_below="@+id/besttime"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:gravity="center|start"
                    android:text="@string/place"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/accommodation"
                    android:layout_below="@+id/bestimeContent"
                    android:padding="4dp"
                    android:textStyle="bold"
                    android:text="@string/accommodation"
                    android:textSize="18sp"
                    android:gravity="start|center"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/accommodationContent"
                    android:layout_below="@+id/accommodation"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:gravity="center|start"
                    android:text="@string/place"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/transportation"
                    android:layout_below="@+id/accommodationContent"
                    android:padding="4dp"
                    android:textStyle="bold"
                    android:text="@string/transportation"
                    android:textSize="18sp"
                    android:gravity="start|center"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/transportationCOntent"
                    android:layout_below="@+id/transportation"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:gravity="center|start"
                    android:text="@string/place"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/description"
                    android:layout_below="@+id/transportationCOntent"
                    android:padding="4dp"
                    android:textStyle="bold"
                    android:text="@string/description"
                    android:textSize="18sp"
                    android:gravity="start|center"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/descriptionCOntent"
                    android:layout_below="@+id/description"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:gravity="center|start"
                    android:text="@string/place"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>